--- a/gb/20/1/27/n11824653.md
+++ b/gb/20/1/27/n11824653.md
@@ -1,56 +1,66 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/jtswrk284/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/jtswrk284/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/jtswrk284/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/jtswrk284/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/jtswrk284/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/jtswrk284/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/jtswrk284/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/jtswrk284/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/jtswrk284/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/jtswrk284/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/jtswrk284/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/jtswrk284/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/jtswrk284/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/jtswrk284/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/jtswrk284/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/jtswrk284/www/master/t/djy/9.jpg" title="健康"><a href="https://www.youlucky.com"><img src="https://raw.githubusercontent.com/jtswrk284/www/master/t/djy/10.jpg" title="购物"></a><a href="https://donate.epochtimes.com/?utm_medium=epochtimes&utm_source=referral&utm_campaign=donate_button_djyarticleheader"><img src="https://raw.githubusercontent.com/jtswrk284/www/master/t/djy/12.jpg" title="捐款"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/jtswrk284/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/jtswrk284/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/jtswrk284/djy/blob/master/gb/nf6123.md#1">诉江</a> | <a target="_blank" href="https://github.com/jtswrk284/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/jtswrk284/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/jtswrk284/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/jtswrk284/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/jtswrk284/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/jtswrk284/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/jtswrk284/djy/blob/master/gb/nf5287.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/jtswrk284/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/jtswrk284/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://github.com/jtswrk284/djy/blob/master/gb/nf1235328.md#1">书籍</a> | <a target="_blank" href="https://github.com/jtswrk284/www/blob/master/README.md?zsrh#1">翻墙</a></p><p><a target="_blank" href="https://github.com/jtswrk284/djy/blob/master/gb/nf5562.md#1">伪火</a> | <a target="_blank" href="https://github.com/jtswrk284/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/jtswrk284/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/jtswrk284/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/jtswrk284/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/jtswrk284/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/jtswrk284/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/jtswrk284/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/jtswrk284/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/jtswrk284/ntdtv/blob/master/gb/prog1530_1.md#1">和平抗议</a> | <a target="_blank" href="https://github.com/jtswrk284/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/jtswrk284/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/jtswrk284/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/jtswrk284/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/kztpea348/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/kztpea348/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/kztpea348/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/kztpea348/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/kztpea348/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/kztpea348/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/kztpea348/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/kztpea348/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/kztpea348/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/kztpea348/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/kztpea348/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/kztpea348/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/kztpea348/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/kztpea348/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/kztpea348/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/kztpea348/www/master/t/djy/9.jpg" title="健康"><a href="https://github.com/kztpea348/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/kztpea348/www/master/t/djy/10a.jpg" title="独家"></a><a href="https://github.com/kztpea348/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/kztpea348/www/master/t/djy/12a.jpg" title="头条"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/kztpea348/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/kztpea348/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/kztpea348/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/kztpea348/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/kztpea348/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/kztpea348/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/kztpea348/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/kztpea348/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/kztpea348/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/kztpea348/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/kztpea348/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/kztpea348/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/kztpea348/www/blob/master/README.md?zsrh#8">翻墙</a></p><p><a target="_blank" href="https://github.com/kztpea348/djy/blob/master/gb/nf5562.md#1">伪火</a> | <a target="_blank" href="https://github.com/kztpea348/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/kztpea348/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/kztpea348/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/kztpea348/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/kztpea348/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/kztpea348/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/kztpea348/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/kztpea348/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/kztpea348/ntdtv/blob/master/gb/prog1530_1.md#1">和平抗议</a> | <a target="_blank" href="https://github.com/kztpea348/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/kztpea348/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/kztpea348/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/kztpea348/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>悉尼内城轻轨被汽车撞出轨道 附近街道封闭</h2>
 
 <h6></h6>
 <hr>
-<p>【大纪元2020年01月27日讯】（大纪元记者天睿澳洲<a href="https://github.com/jtswrk284/djy/blob/master/gb/tag/%E6%82%89%E5%B0%BC.md">悉尼</a>编译报导）上周日，悉尼内城区一辆汽车将一列<a href="https://github.com/jtswrk284/djy/blob/master/gb/tag/%E8%BD%BB%E8%BD%A8%E5%88%97%E8%BD%A6.md">轻轨列车</a>撞出了轨道。两辆车的司机分别受了轻伤，但乘客无人受伤。事故地点附近街道被关闭，<a href="https://github.com/jtswrk284/djy/blob/master/gb/tag/%E8%BD%BB%E8%BD%A8%E4%B9%98%E5%AE%A2.md">轻轨乘客</a>被迫下车，步行至下一站。</p>
-<p>轻轨承运公司ALTRAC证实，下午4点40分左右，在萨里山（Surry Hills）南道林街（South Dowling Street）上，一辆南向行驶的汽车撞上了一列<a href="https://github.com/jtswrk284/djy/blob/master/gb/tag/%E8%BD%BB%E8%BD%A8%E5%88%97%E8%BD%A6.md">轻轨列车</a>的车头。这辆67米长的轻轨列车当时正往兰德威克（Randwick）行驶。</p>
+<p>【大纪元2020年01月27日讯】（大纪元记者天睿澳洲<ahref="https://github.com/kztpea348/djy/blob/master/gb/tag/%E6%82%89%E5%B0%BC.md#1">悉尼</a>编译报导）上周日，悉尼内城区一辆汽车将一列<ahref="https://github.com/kztpea348/djy/blob/master/gb/tag/%E8%BD%BB%E8%BD%A8%E5%88%97%E8%BD%A6.md#1">轻轨列车</a>撞出了轨道。两辆车的司机分别受了轻伤，但乘客无人受伤。事故地点附近街道被关闭，<ahref="https://github.com/kztpea348/djy/blob/master/gb/tag/%E8%BD%BB%E8%BD%A8%E4%B9%98%E5%AE%A2.md#1">轻轨乘客</a>被迫下车，步行至下一站。</p>
+<p>轻轨承运公司ALTRAC证实，下午4点40分左右，在萨里山（Surry Hills）南道林街（South Dowling Street）上，一辆南向行驶的汽车撞上了一列<ahref="https://github.com/kztpea348/djy/blob/master/gb/tag/%E8%BD%BB%E8%BD%A8%E5%88%97%E8%BD%A6.md#1">轻轨列车</a>的车头。这辆67米长的轻轨列车当时正往兰德威克（Randwick）行驶。</p>
 <p>轻轨列车虽然被撞出了轨道，但只受到轻微损伤。车祸发生后，轻轨列车堵住了南道林街，导致克利夫兰街（Cleveland St）和弗林德斯街（Flinders St）之间的路段被封锁。中央火车站（Central）和莫尔园（Moore Park）之间的轻轨服务暂停。交通管理中心（TMC）发言人说，直到傍晚7时，被封锁街道的两条车道每个方向才重新开放了一条车道。</p>
 <p>轻轨列车上的乘客下车后步行到莫尔园站。撞轻轨的汽车之后被拖车拖走。</p>
 <p>ALTRAC发言人说，警察、急救服务和轻轨维修人员一起合作处理脱轨的列车。</p>
-<p>上周二，<a href="https://github.com/jtswrk284/djy/blob/master/gb/tag/%E6%82%89%E5%B0%BC.md">悉尼</a>一列轻轨在市政厅（Town Hall）附近发生故障，导致三分之一的轻轨网关闭，并且导致另外一列轻轨列车上的数百乘客被困了一个多小时，最后警察出动，乘客才得以疏散。</p>
+<p>上周二，<ahref="https://github.com/kztpea348/djy/blob/master/gb/tag/%E6%82%89%E5%B0%BC.md#1">悉尼</a>一列轻轨在市政厅（Town Hall）附近发生故障，导致三分之一的轻轨网关闭，并且导致另外一列轻轨列车上的数百乘客被困了一个多小时，最后警察出动，乘客才得以疏散。</p>
 <p>环形码头（Circular Quay）至兰德威克的12公里轻轨路程用时为45到50分钟，但这段路程原计划应该在上周缩短到40到45分钟。</p>
 <p>新州交通厅发言人说，随着车次的增加，路上用时会缩短。</p>
 <p>责任编辑：岳明</p>
 
 <hr>
 
-#### 本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://git.io/JesJV">翻墙软件</a>才能访问）
-> 原文：<a href="https://www.epochtimes.com/gb/20/1/27/n11824653.htm">悉尼内城轻轨被汽车撞出轨道 附近街道封闭</a>
 
-
-#### 下载<a href="https://git.io/JesJV">翻墙软件</a>浏览<a href="https://www.epochtimes.com">大纪元</a>相关新闻：
-> <li><a href="https://www.epochtimes.com/gb/20/1/23/n11814930.htm">悉尼数百乘客被锁轻轨中70分钟 报警才脱困</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/1/22/n11812416.htm">一轻轨在悉尼市政厅抛锚 9车乘客乱作一团</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/1/20/n11806763.htm">本周起悉尼轻轨加快运行 总行程时间减10%</a></li>
-> <li><a href="https://www.epochtimes.com/gb/19/12/17/n11727399.htm">悉尼轻轨通过高峰期考验 乘客赞舒适方便</a></li>
-> <li><a href="https://www.epochtimes.com/gb/19/12/16/n11725675.htm">悉尼新轻轨列车首日通勤一波三折</a></li>
-> <li><a href="https://www.epochtimes.com/gb/19/8/29/n11485298.htm">悉尼轻轨列车首次白天亮相乔治街 路人争拍</a></li>
-> <li><a href="https://www.epochtimes.com/gb/19/7/30/n11418821.htm">悉尼市区轻轨列车测试险酿惨祸</a></li>
-> <li><a href="https://www.epochtimes.com/gb/19/7/3/n11361080.htm">悉尼轻轨列车即将测试 市中心行人注意安全</a></li>
-
-#### 下载<a href="https://git.io/JesJV">翻墙软件</a>浏览<a href="https://www.epochtimes.com">大纪元</a>热门新闻：
-> <li><a href="https://www.epochtimes.com/gb/20/1/17/n11801312.htm">【更新】全国确诊肺炎2744例80死 京沪等停省运</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/1/25/n11821331.htm">知情人：武汉肺炎长沙蔓延 远比官方报导严重</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/1/26/n11822813.htm">哈佛专家：武汉新型冠状病毒热核级传播力</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/1/26/n11823586.htm">【快讯】直升机坠毁9死 NBA巨星科比遇难</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/1/20/n11807585.htm">2020庚子年国运命理探讨与前瞻</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/1/17/n11801163.htm">除旧布新 怎样贴春联春贴不犯禁忌？</a></li>
-> <li><a href="https://www.epochtimes.com/gb/7/2/12/n1621075.htm">丢勒兄弟的手</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/1/5/n11768578.htm">苏东坡书迹第一《寒食帖》荡过人生低谷的净与美</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/1/25/n11821017.htm">大陆开启封路模式 封城封路封村封户</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/1/25/n11821057.htm">专家：武汉肺炎源头或来自中共病毒实验室</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/1/25/n11821056.htm">上海疫情严峻 启动一级回应机制</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/1/25/n11821374.htm">武汉人恐慌无助 网络上求救</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/1/26/n11823054.htm">【拍案惊奇】武汉肺炎有治愈 美国推预防指南</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/1/24/n11819138.htm">【新闻看点】武汉肺炎民众大逃亡 传中共抓捕</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/1/24/n11818809.htm">陆剧《急诊科医生》 3年前演绎“武汉肺炎”</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/1/25/n11819909.htm">子瑜体恤医护人员辛劳 盼新年大家平安健康</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/1/24/n11819130.htm">港星林利抗癌成功 除夕夜发文：癌指数跑光光</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/1/26/n11822832.htm">武汉惨况如炼狱 女星叹：身在台湾是一种幸福</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/1/26/n11823229.htm">武汉肺炎蔓延 刘德华第三度取消演唱会</a></li>
+<strong>相关新闻：</strong>
+<li><a href="https://github.com/kztpea348/djy/blob/master/gb/19/7/3/n11361080.md#1">悉尼轻轨列车即将测试 市中心行人注意安全</a></li>
+<li><a href="https://github.com/kztpea348/djy/blob/master/gb/19/7/30/n11418821.md#1">悉尼市区轻轨列车测试险酿惨祸</a></li>
+<li><a href="https://github.com/kztpea348/djy/blob/master/gb/19/8/29/n11485298.md#1">悉尼轻轨列车首次白天亮相乔治街 路人争拍</a></li>
+<li><a href="https://github.com/kztpea348/djy/blob/master/gb/19/12/16/n11725675.md#1">悉尼新轻轨列车首日通勤一波三折</a></li>
+<li><a href="https://github.com/kztpea348/djy/blob/master/gb/19/12/17/n11727399.md#1">悉尼轻轨通过高峰期考验 乘客赞舒适方便</a></li>
+<li><a href="https://github.com/kztpea348/djy/blob/master/gb/20/1/20/n11806763.md#1">本周起悉尼轻轨加快运行 总行程时间减10%</a></li>
+<li><a href="https://github.com/kztpea348/djy/blob/master/gb/20/1/22/n11812416.md#1">一轻轨在悉尼市政厅抛锚 9车乘客乱作一团</a></li>
+<li><a href="https://github.com/kztpea348/djy/blob/master/gb/20/1/23/n11814930.md#1">悉尼数百乘客被锁轻轨中70分钟 报警才脱困</a></li>
+<li><a href="https://github.com/kztpea348/djy/blob/master/gb/20/10/19/n12487582.md#1">规划：悉尼内城800公里车道或变“绿地”</a></li>
+<li><a href="https://github.com/kztpea348/djy/blob/master/gb/20/10/20/n12488436.md#1">悉尼南区一女被刺身亡 一男子被捕协助调查</a></li>
 <hr>
 
-#### 手机上长按并复制下面二维码分享本文章：<br><br><img src="http://d1p1.ip.zn2.us/v.php?action=qrcode&url=https://github.com/jtswrk284/djy/blob/master/gb/20/1/27/n11824653.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/jtswrk284/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jtswrk284/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/jtswrk284/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/jtswrk284/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/jtswrk284/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jtswrk284/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/jtswrk284/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jtswrk284/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/jtswrk284/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jtswrk284/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/jtswrk284/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jtswrk284/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/jtswrk284/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jtswrk284/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/jtswrk284/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jtswrk284/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/jtswrk284/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jtswrk284/djy/master/gb/300/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/jtswrk284/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jtswrk284/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/jtswrk284/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jtswrk284/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/jtswrk284/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jtswrk284/djy/master/gb/300/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/jtswrk284/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jtswrk284/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/jtswrk284/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jtswrk284/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/jtswrk284/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jtswrk284/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/jtswrk284/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jtswrk284/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/jtswrk284/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jtswrk284/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/jtswrk284/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jtswrk284/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/jtswrk284/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jtswrk284/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/jtswrk284/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jtswrk284/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/jtswrk284/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jtswrk284/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/jtswrk284/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jtswrk284/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/jtswrk284/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jtswrk284/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/jtswrk284/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jtswrk284/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+
+<strong>编辑推荐：</strong>
+<li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/2/22/n11887949.md#1">美参议员：中共刻意控制新冠病毒信息流动</a></li>
+<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/4/30/n11225005.md#1" target="_blank">林辉：中共高规格接待蒙古独裁者背后的丑行</a></li><li><a href="https://github.com/kztpea348/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank">关注3亿人三退</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/8/18/n10648766.md#1" target="_blank">这些患绝症的精英们何以逢生（1）</a></li>
+<hr>
+
+<strong>热门新闻：</strong>
+<li><a href="https://github.com/kztpea348/djy/blob/master/gb/20/10/14/n12474369.md#1">日本出现“UFO空战”画面 多个追赶一个</a></li>
+<li><a href="https://github.com/kztpea348/djy/blob/master/gb/20/2/14/n11869946.md#1">大疫下解救有道 历史启示带您闯过中共肺炎</a></li>
+<li><a href="https://github.com/kztpea348/djy/blob/master/gb/20/10/16/n12479879.md#1">曾预言川普当选 传教士：上帝派天使助连任</a></li>
+<li><a href="https://github.com/kztpea348/djy/blob/master/gb/20/9/30/n12440550.md#1">《圣经》与《推背图》预言的应验与变换1</a></li>
+<li><a href="https://github.com/kztpea348/djy/blob/master/gb/20/9/3/n12378281.md#1">【西安事变?蒋宋夫妇】天降神谕 使命之行</a></li>
+<li><a href="https://github.com/kztpea348/djy/blob/master/gb/20/10/20/n12487770.md#1">【远见快评】拜登家丑闻4连爆 中共人质外交</a></li>
+<li><a href="https://github.com/kztpea348/djy/blob/master/gb/20/10/19/n12486847.md#1">【珍言真语】梁锦祥：拜登丑闻曝中共靠港漂白</a></li>
+<li><a href="https://github.com/kztpea348/djy/blob/master/gb/20/10/19/n12487059.md#1">【有冇搞错】一带一路遭毛思想打击</a></li>
+<li><a href="https://github.com/kztpea348/djy/blob/master/gb/20/10/18/n12483848.md#1">田云：电脑门发酵 拜登竞选经理自曝民调不实</a></li>
+<li><a href="https://github.com/kztpea348/djy/blob/master/gb/20/10/18/n12484807.md#1">【役情最前线】王岐山命运难料 新林彪事件恐现</a></li>
+<li><a href="https://github.com/kztpea348/djy/blob/master/gb/20/10/18/n12484808.md#1">哈萨克斯坦爆亨特?拜登丑闻 涉及克里女儿</a></li>
+<li><a href="https://github.com/kztpea348/djy/blob/master/gb/20/10/18/n12484792.md#1">洪金宝拄拐杖近照曝光 网民惊讶</a></li>
+<li><a href="https://github.com/kztpea348/djy/blob/master/gb/20/10/18/n12484953.md#1">章子怡产后首秀 发际线上移引热议</a></li>
+<li><a href="https://github.com/kztpea348/djy/blob/master/gb/20/10/18/n12485042.md#1">陈坤准时为周迅庆生 连续11年从未中断</a></li>
+<li><a href="https://github.com/kztpea348/djy/blob/master/gb/20/10/17/n12482595.md#1">TWICE定延心理不安 暂不参与正规二辑等活动</a></li>
+<li><a href="https://github.com/kztpea348/djy/blob/master/gb/20/10/19/n12486080.md#1">丁小芹卖假包需入狱服刑 判刑2年半定谳</a></li>
+<li><a href="https://github.com/kztpea348/djy/blob/master/gb/20/10/6/n12455916.md#1">运动后吃对修复肌肉、改善疲劳 营养师推3食谱</a></li>
+<li><a href="https://github.com/kztpea348/djy/blob/master/gb/20/10/18/n12484089.md#1">两大一小的白鲸搁浅 俄罗斯男子花7小时营救</a></li>
+<li><a href="https://github.com/kztpea348/djy/blob/master/gb/20/10/19/n12486194.md#1">美里根号航母打击群返回南海 缩时短片释出</a></li>
+<li><a href="https://github.com/kztpea348/djy/blob/master/gb/20/10/19/n12485655.md#1">全球15国民调：台湾人最希望川普当选</a></li>
+<li><a href="https://github.com/kztpea348/djy/blob/master/gb/20/10/18/n12483851.md#1">意大利小镇仅住2人 但坚持戴口罩保持距离</a></li>
+<hr>
+
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/kztpea348/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/kztpea348/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/20/1/27/n11824653.htm">悉尼内城轻轨被汽车撞出轨道 附近街道封闭</a></p><hr>
+
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/kztpea348/djy/blob/master/gb/20/1/27/n11824653.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/kztpea348/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kztpea348/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/kztpea348/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/kztpea348/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/kztpea348/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kztpea348/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/kztpea348/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kztpea348/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/kztpea348/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kztpea348/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/kztpea348/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kztpea348/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/kztpea348/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kztpea348/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/kztpea348/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kztpea348/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/kztpea348/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kztpea348/djy/master/gb/300/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/kztpea348/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kztpea348/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/kztpea348/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kztpea348/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/kztpea348/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kztpea348/djy/master/gb/300/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/kztpea348/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kztpea348/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/kztpea348/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kztpea348/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/kztpea348/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kztpea348/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/kztpea348/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kztpea348/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/kztpea348/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kztpea348/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/kztpea348/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kztpea348/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/kztpea348/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kztpea348/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/kztpea348/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kztpea348/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/kztpea348/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kztpea348/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/kztpea348/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kztpea348/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/kztpea348/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kztpea348/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/kztpea348/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kztpea348/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
