--- a/gb/20/10/17/n12482137.md
+++ b/gb/20/10/17/n12482137.md
@@ -376,7 +376,7 @@
 
 <strong>编辑推荐：</strong>
 <li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/2/22/n11887949.md#1">美参议员：中共刻意控制新冠病毒信息流动</a></li>
-<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/12/31/n11758706.md#1" target="_blank">张林：共军在朝鲜战争中丧生两百万（1）</a></li><li><a href="https://github.com/kztpea348/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank">追寻真理 这书讲什么</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/1/31/n11014025.md#1" target="_blank">绝处逢生 79岁老军医讲述的亲身经历</a></li>
+<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/20/2/7/n11851768.md#1" target="_blank">大瘟疫德国两城曾同命运 为何今日迥异</a></li><li><a href="https://github.com/kztpea348/www/blob/master/README.md?dfh#1" target="_blank">下载免费翻墙软件</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/9/1/10/n2392045.md#1" target="_blank">中国人想问又不敢问的法轮功问题解答</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
